# FTPORA

./: .gitignore  README.md  list_cameras.py  main.py  notes.md  open_chrome_screens.sh  pyproject.toml  server.py  settings.html  settings.py  test_cameras.py  test_exposure.py
