[project]
name = "kally-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.127",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
